# speakflow

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/frontback/: CMakeLists.txt  backend.cpp  backend.h  common_interface.h  frontend.cpp  frontend.h  main.cpp
inc/: chat.h  common-sdl.h  common-whisper.h  common.h  document.h  inference.h  mainwindow.h  messagequeue.h  monitorwindow.h  mylog.h  parse.h  previewpage.h  qtaudio.h
src/: CMakeLists.txt  chat.cpp  common-sdl.cpp  common-whisper.cpp  common.cpp  document.cpp  document.h  inference.cpp  main.cpp  mainwindow.cpp  monitorwindow.cpp  monitorwindow.h  mylog.cpp  parse.cpp  previewpage.cpp  previewpage.h
src/audio/: CMakeLists.txt  sdlaudio.cpp
src/chat/: CMakeLists.txt  chat.cpp  chat.h
src/event/: CMakeLists.txt  eventbus.h  events.h
src/parse/: CMakeLists.txt  parse.cpp  parse.h
src/res/: CMakeLists.txt
src/sentense/: CMakeLists.txt  sentense.cpp  sentense.h  test.cpp
src/sentense/audio/: CMakeLists.txt  audio.h  pipeaudio.cpp  pipeaudio.h  qtaudio.cpp  qtaudio.h  sdlaudio.cpp  sdlaudio.h
src/sentense/vad/: CMakeLists.txt  silero-vad-onnx.h
src/stt/: CMakeLists.txt  common-whisper.h  inference.cpp  inference.h  stt.cpp  stt.h  test.cpp
src/ui/: CMakeLists.txt
src/vad/: CMakeLists.txt  silero-vad-onnx.cpp
src/widgets/cardman/: CMakeLists.txt  cardman.cpp  cardman.h  common_stt.h  flowlayout.cpp  flowlayout.h  test.cpp
src/widgets/queman/: CMakeLists.txt  queman.cpp  queman.h  test.cpp
ui/: mainwindow.ui  monitorwindow.ui
